# hyper-restful-rs

./: Cargo.toml  README.md
examples/: json_server.rs
src/: http.rs  lib.rs  log.rs  pipeline.rs
src/http/: handler.rs  router.rs  server.rs
src/log/: simple_logger.rs
src/pipeline/: async_connect.rs  connect.rs  link.rs  test.rs
